[package]
name = "hyperg"
version = "0.1.0"
authors = ["Przemyslaw Rekucki <prekucki@rcl.pl>"]
edition = "2018"

[dependencies]

[dependencies.actix-web]
version="1.0.0-rc"
default-features=false


[dependencies.serde]
version="1.0"
features=["derive"]

[dependencies.serde_json]
version="1.0"

[dependencies.futures]
version = "0.1.27"

[profile.release]
lto=true
codegen-units=1