[package]
name = "hyperg"
version = "0.3.0"
authors = ["Golemfactory <contact@golem.network>"]
edition = "2018"

[dependencies]

[dependencies.actix]
version = "0.8.2"
default-features=false

[dependencies.actix-web]
version="1.0.0-rc"
default-features=false

[dependencies.tokio-tcp]
version = "0.1.3"

[dependencies.tokio-reactor]
version = "0.1.7"

[dependencies.tokio-io]
version = "0.1.12"

[dependencies.tokio-codec]
version = "0.1.1"

[dependencies.bytes]
version = "0.4.12"

[dependencies.serde]
version="1.0"
features=["derive"]

[dependencies.serde_json]
version="1.0"

[dependencies.bincode]
version="1.1.4"

[dependencies.futures]
version = "0.1.27"

[dependencies.structopt]
version="0.2"
default-features = false

[dependencies.log]
version="0.4"

[dependencies.flexi_logger]
version = "0.11.4"

[dependencies.app_dirs]
version = "1.2.1"

[dependencies.failure]
version = "0.1.5"

[dependencies.sha2]
version = "0.8.0"

[dependencies.rand]
version = "0.6.5"

[profile.release]
lto=true
codegen-units=1

#[build-dependencies]
#vergen = "3"